# rayEngine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  save.json
Data/Entities/: blueprints.json
Data/Ldtk/: ldtk_test.ldtk
Data/Levels/: hello.json  test.json
Data/Levels/hello/: level_0.ldtkl
Data/Saves/: save.json
Data/Textures/: chara_idle.aseprite  chara_idle.json  chara_walk.aseprite  chara_walk.json  kill.json  sprites_meta.json  yhtwtg_terrain.aseprite  yhtwtg_terrain.json
Data/Textures/Characters/: Main.xcf  Unknown.xcf  Unknown2.xcf  Unknown3.xcf  eye.xcf  thing.xcf
Data/Textures/Runes/: A.tga  B.tga  D.tga  E.tga  EI.tga  F.tga  G.tga  H.tga  I.tga  J.tga  K.tga  L.tga  M.tga  N.tga  NG.tga  O.tga  P.tga  R.tga  S.tga  T.tga  TH.tga  U.tga  W.tga  Z.tga
Data/Tiled/: untitled.tiled-session  untitled.tj  untitled.tmj  yayayaaaa.tsj  youhou.tsj
libs/Quadtree-master/include/: Box.h  Quadtree.h  Vector2.h
libs/json-3.10.2/: Makefile
src/: definitions.h  engine.cpp  engine.h  gui.h  imgui_layer.cpp  imgui_layer.h  input.cpp  input.h  locator.h  main.cpp  rayEngine  runes.cpp  runes.h  spawn.h
src/Components/: actionUnit.h  collisionRect.cpp  collisionRect.h  objComponent.h  rigidBody.cpp  rigidBody.h  sprite.cpp  sprite.h  textAnim.h
src/Managers/: bullet_m.cpp  bullet_m.h  ldtk_m.cpp  ldtk_m.h  object_m.cpp  object_m.h  raycam_m.cpp  raycam_m.h  renderer_m.h  save_manager.cpp  save_manager.h  shader_m.cpp  shader_m.h  sound_m.cpp  sound_m.h  sprite_m.cpp  sprite_m.h  texture_m.cpp  texture_m.h  tiled_m.cpp  tiled_m.h
src/Object/: basicEnt.cpp  basicEnt.h  clock.h  gObject.cpp  gObject.h  raycam.cpp
src/Object/Components/: objComponent.h  rigidBody.cpp  rigidBody.h  slave.h  sprite.cpp  sprite.h  textAnim.h
src/Objects/: bSpawner.cpp  bSpawner.h  basicEnt.cpp  basicEnt.h  bullet.cpp  bullet.h  character.cpp  character.h  checkpoint.cpp  checkpoint.h  clock.cpp  clock.h  gObject.h  hObject.h  kill.cpp  kill.h  pano.cpp  pano.h  pattern.cpp  pattern.h  raycam.cpp  raycam.h  receptacle.cpp  receptacle.h  simpleBoss.cpp  simpleBoss.h  upgradePickup.cpp  upgradePickup.h  upgradeRegistry.cpp  upgradeRegistry.h
src/Objects/Bullet/: bullet.cpp  bullet.h  explosiveBullet.h  rigidBullet.h  zigzagBullet.h
src/libs/: Box.h  Vector2.h
